--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -58,6 +58,35 @@
                 </div>
             </div>
         </div>
+        <div class="section3">
+            <div class="left">
+                <img src="https://i.ibb.co/ssvvmSd/cherries.png" alt="">
+            </div>
+            <div class="right">
+                <img src="images\desktop\image-photography.jpg" alt="">
+            </div>
+        </div>
+        <div class="section4 testmonials">
+            <h1>CLIENT TESTIMONIALS</h1>
+            <div class="clients">
+                <div class="client1">
+                    <div class="client-image">
+                        <img src="images\image-emily.jpg" alt="">
+                    </div>
+                    <p>We put our trust in sunnyside and they delivered, making sure our needs were met and deadlines were always hit</p>
+                    <div class="details">
+                        <h2>Emily R.</h2>
+                        <h4>Marketing Director</h4>
+                    </div>
+                </div>
+                <div class="client2">
+                    <img src="images\image-thomas.jpg" alt="">
+                </div>
+                <div class="client3">
+                    <img src="images\image-jennie.jpg" alt="">
+                </div>
+            </div>
+        </div>
     </div>
 
 </body>
