--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -69,7 +69,7 @@
         <div class="section4 testmonials">
             <h1>CLIENT TESTIMONIALS</h1>
             <div class="clients">
-                <div class="client1">
+                <div class="client">
                     <div class="client-image">
                         <img src="images\image-emily.jpg" alt="">
                     </div>
@@ -79,12 +79,41 @@
                         <h4>Marketing Director</h4>
                     </div>
                 </div>
-                <div class="client2">
-                    <img src="images\image-thomas.jpg" alt="">
+                <div class="client">
+                    <div class="client-image">
+                        <img src="images\image-thomas.jpg" alt="">
+                    </div>
+                    <p>We put our trust in sunnyside and they delivered, making sure our needs were met and deadlines were always hit</p>
+                    <div class="details">
+                        <h2>Thomas S.</h2>
+                        <h4>Cheif Operating Officer</h4>
+                    </div>
                 </div>
-                <div class="client3">
-                    <img src="images\image-jennie.jpg" alt="">
+                <div class="client">
+                    <div class="client-image">
+                        <img src="images\image-jennie.jpg" alt="">
+                    </div>
+                    <p>We put our trust in sunnyside and they delivered, making sure our needs were met and deadlines were always hit</p>
+                    <div class="details">
+                        <h2>Jennie F.</h2>
+                        <h4>Business Owner</h4>
+                    </div>
                 </div>
+            </div>
+           
+        </div>
+        <div class="section5">
+            <div class="image">
+                <img src="images\desktop\image-gallery-milkbottles.jpg" alt="">
+            </div>
+            <div class="image">
+                <img src="images\desktop\image-gallery-orange.jpg" alt="">
+            </div>
+            <div class="image">
+                <img src="images\desktop\image-gallery-cone.jpg" alt="">
+            </div>
+            <div class="image">
+                <img src="images\desktop\image-gallery-sugarcubes.jpg" alt="">
             </div>
         </div>
     </div>
