--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -116,6 +116,22 @@
                 <img src="images\desktop\image-gallery-sugarcubes.jpg" alt="">
             </div>
         </div>
+        <div class="footer">
+            <div class="logo">
+                <img  src="https://svgur.com/i/Zvd.svg">
+            </div>
+            <div class="footer-navigation">
+                <span>About</span>
+                <span>Services</span>
+                <span>Projects</span>
+            </div>
+            <div class="social">
+                <img src="images\icon-facebook.svg" alt="">
+                <img src="images\icon-instagram.svg" alt="">
+                <img src="images\icon-twitter.svg" alt="">
+                <img src="images\icon-pinterest.svg" alt="">
+            </div>
+        </div>
     </div>
 
 </body>
