updated landing page

--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -60,10 +60,18 @@
         </div>
         <div class="section3">
             <div class="left">
-                <img src="https://i.ibb.co/ssvvmSd/cherries.png" alt="">
+                <h1>Graphic Design</h1>
+                <div class="text-container">
+                    <p>Great Design makes you memorable. We deliever artwork that underscores your brand message and
+                        captures potential client's attention</p>
+                </div>
             </div>
             <div class="right">
-                <img src="images\desktop\image-photography.jpg" alt="">
+                <h1>Photography</h1>
+                <div class="text-container">
+                    <p>Increase your credibility by getting most of the stunning, high-quality photos that improve your
+                        business image.</p>
+                </div>
             </div>
         </div>
         <div class="section4 testmonials">
@@ -73,7 +81,8 @@
                     <div class="client-image">
                         <img src="images\image-emily.jpg" alt="">
                     </div>
-                    <p>We put our trust in sunnyside and they delivered, making sure our needs were met and deadlines were always hit</p>
+                    <p>We put our trust in sunnyside and they delivered, making sure our needs were met and deadlines
+                        were always hit</p>
                     <div class="details">
                         <h2>Emily R.</h2>
                         <h4>Marketing Director</h4>
@@ -83,7 +92,8 @@
                     <div class="client-image">
                         <img src="images\image-thomas.jpg" alt="">
                     </div>
-                    <p>We put our trust in sunnyside and they delivered, making sure our needs were met and deadlines were always hit</p>
+                    <p>SunnySide's enthusiasm coupled with their keen interest in our brand's success made it a
+                        satisfying and enjoyable experience.</p>
                     <div class="details">
                         <h2>Thomas S.</h2>
                         <h4>Cheif Operating Officer</h4>
@@ -93,14 +103,15 @@
                     <div class="client-image">
                         <img src="images\image-jennie.jpg" alt="">
                     </div>
-                    <p>We put our trust in sunnyside and they delivered, making sure our needs were met and deadlines were always hit</p>
+                    <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly
+                        recommended!</p>
                     <div class="details">
                         <h2>Jennie F.</h2>
                         <h4>Business Owner</h4>
                     </div>
                 </div>
             </div>
-           
+
         </div>
         <div class="section5">
             <div class="image">
@@ -118,7 +129,7 @@
         </div>
         <div class="footer">
             <div class="logo">
-                <img  src="https://svgur.com/i/Zvd.svg">
+                <img src="https://svgur.com/i/Zvd.svg">
             </div>
             <div class="footer-navigation">
                 <span>About</span>
